# BeSpec

./: .gitignore  Cargo.toml  FFT_Stress_Testing.md  README.md  build.rs  install.sh  shell.nix
.agents/skills/rust-best-practices/: SKILL.md
.github/workflows/: ci.yaml  release.yml  releaser.yml
assets/: icon.icns
docs/: FFT_Stress_Testing.md  case_study.md  linux_setup.md  macos_setup.md
examples/: list-pw-sources.rs
src/: audio_capture.rs  audio_capture_pw.rs  audio_device.rs  fft_config.rs  fft_processor.rs  gui.rs  main.rs  presets.rs  shared_state.rs  temp.rs  update_check.rs
src/gui/: decorations.rs  mod.rs  theme.rs  visualizers.rs  widgets.rs
src/media/: dummy.rs  linux.rs  macos.rs  mod.rs  windows.rs
