[package]
name = "beanal"
version = "1.1.0"
edition = "2021"
authors = ["BeSpec-Dev"]
description = "A lightweight, highly configurable, real-time audio spectrum visualizer"

[dependencies]
# Audio capture and processing
cpal = "0.15"
realfft = "3.3"
num-complex = "0.4"
lazy_static = "1.4"
directories = "5.0"

# Data logging
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["time", "env-filter"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

# GUI framework
eframe = "0.29"
egui = "0.29"

# Thread communication and syncronization
crossbeam-channel = "0.5"

# Serialization for settings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1