[package]
name = "BeSpec"
# IMPORTANT: Must follow Semantic Versioning (Major.Minor.Patch)
# The update checker relies on this format. Do not use dates or strings.
version = "1.6.3"
edition = "2021"
authors = ["BeSpec-Dev"]
description = "A lightweight, highly configurable, real-time audio spectrum visualizer"

[build-dependencies]
winres = "0.1"

[dependencies]
# Audio capture and processing
cpal = "0.15"
realfft = "3.3"
num-complex = "0.4"
directories = "5.0"

# Data logging
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["time", "env-filter"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
libc = "0.2"

# Icon Generation
image = {version = "0.24", default-features = false, features = ["png", "jpeg"] }

# GUI framework
eframe = "0.29"
egui = { version = "0.29", features = ["serde"] }

# Thread communication and syncronization
crossbeam-channel = "0.5"

# Serialization for settings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Network & Browser Integration
ureq = {version = "2.9", features = ["json", "tls", "gzip"] }
open = "5.0"

# Update Check / Version Control
semver = "1.0"

# Windows: Uses the official Microsoft crate
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Foundation_Collections",
    "Media_Control",
    "Storage_Streams",
] }
tokio = { version = "1.0", default-features = false, features = ["rt", "time", "sync"] }

# Linux: Uses the MPRIS standard via D-Bus
[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.0"


# macOS: Uses private MediaRemote framework bindings
[target.'cfg(target_os = "macos")'.dependencies]
mediaremote-rs = "0.1"
base64 = "0.22"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Space saving options
# Strip = true removes symbol information during a crash
strip = true
# panic = "abort" reduces binary size by disabling unwinding
panic = "abort"

# Explicitly declare the test harness binary
[[bin]]
name = "media_test"
path = "src/bin/media_test.rs"

# Explicitly declare the main binary (BeSpec)
[[bin]]
name = "bespec"
path = "src/main.rs"